more migration to consulo 3 api